...
                    android:layout_height="90dp"
                    android:backgroundTint="#000000"
                    android:id="@+id/actBack"
                    app:cornerRadius="0dp"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:backgroundTint="#000000"
                    android:textSize="17sp"
                    android:id="@+id/actClear"
                    app:cornerRadius="0dp" android:text="@string/Clear"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="90dp"
                    android:textSize="30sp"
                    android:backgroundTint="#000000" android:id="@+id/actChangeSign"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.654"
...
                    android:layout_height="90dp"
                    android:textSize="30sp"
                    android:backgroundTint="#000000" android:id="@+id/operSqrt"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.95"
...
                    android:layout_height="90dp"
                    android:backgroundTint="#000000"
                    android:id="@+id/operPlus"
                    android:textSize="30sp"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
...
                    android:layout_height="90dp"
                    android:backgroundTint="#000000"
                    android:id="@+id/inpt5"
                    android:textSize="30sp"
                    app:cornerRadius="0dp" app:layout_constraintTop_toTopOf="parent"
...
                    android:layout_height="90dp"
                    android:backgroundTint="#000000"
                    android:id="@+id/operMin"
                    android:textSize="30sp"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
...
                    android:textSize="30sp"
                    android:backgroundTint="#000000"
                    android:id="@+id/inpt1"
                    app:cornerRadius="0dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:backgroundTint="#000000"
                    android:textSize="30sp"
                    android:id="@+id/inpt2"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
...
                    android:backgroundTint="#000000"
                    android:textSize="30sp"
                    android:id="@+id/inpt3"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
...
                    android:backgroundTint="#000000"
                    android:textSize="30sp"
                    android:id="@+id/operDiv"
                    app:cornerRadius="0dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
...
                    android:layout_height="90dp"
                    android:backgroundTint="#000000"
                    android:id="@+id/actMult"
                    android:textSize="30sp"
                    app:cornerRadius="0dp" app:layout_constraintEnd_toEndOf="parent"
...
                android:backgroundTint="#000000"
                android:textSize="30sp"
                android:id="@+id/actCalc"
                app:cornerRadius="0dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
...
            android:id="@+id/appName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/outputWindow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
